--- a/style.css
+++ b/style.css
@@ -1,272 +1,216 @@
-body{
-    margin:0;
-    font-size: 16px;
-    font-family: 'Urbanist', sans-serif;
-    background-color:#f0dab3;
-}
-
-h1, h2, h3,h4,h5,h6{
-    margin: 0;
-}
-
-*{
-    box-sizing: border-box;
-}
-
-li{
-    list-style-type: none;
-}
-ul{
-    padding-inline-start: 0;
-}
-
-.container{
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.intro{
-    width:100%;
-    height: 100vh;
-    background: url("/background.png") center no-repeat;
-    background-size: cover;
-    display:flex;
-    flex-direction:column;
-    justify-content: center;
-}
-.intro_h{
-    color: #f0dab3;
+body, html {
     width: 100%;
     height: 100%;
-    text-align: center;
-}
-.intro_h1{
-    text-transform: uppercase;
-    font-size:100px;
-}
-.intro_h2{
-    font-size: 50px;
+    margin: 0;
+    background-color: #e1fdb1;
 }
 
-.header{
+h1, h2, h3, h4, h5, h6
+{
+    margin: 0;
+}
+
+.container 
+{
+    width: 100%;
+    position: relative;
+}
+
+.nav 
+{
     position: absolute;
-    background-color: rgb(149,142,134,.5);
-    font-size:32px;
-    right: 0;
+    width: 100%;
+    text-transform: uppercase;
+    background-color: #143101;
     left:0;
     z-index: 1;
-}
-
-.nav{
-    display: flex;
     justify-content: center;
 }
-.nav_link{
-    text-transform: uppercase;
-    color:#f0dab3;
-    transition: color .4s linear;
-    margin: 16px 32px;
-}
-.nav_link:hover{
-    color: #B5A58E;
-    text-decoration:bold;
-}
 
-.skills_start{
-    background: url("/bg-2.jpg") center no-repeat;
-    background-size: cover;
-}
-.skills{
-    width: 100%;
-    display: flex;
-}
-.skills_item{
-    margin: 0;
-    width: 50%;
-}
-.skills_title{
-    font-size: 36px;
-    color: #f0dab3;
-    text-align: center;
-    text-transform: uppercase;
-    margin:20px
-}
-.skills_text{
-    text-align: center;
+.nav_link
+{
+    margin: 20px;
+    color: #e7ffbd;
+    transition: all 1s;
     font-size: 24px;
-    color: #f0dab3;
 }
 
-.me{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-.me_start{
-    margin: 20px;
-}
-.me_title{
-    font-size: 32px;
-    margin: 20px;
-}
-.me_text{
-    margin: 20px;
-}
-.me_photo{
-    border-radius: 20%;
-    margin: 20px;
+.nav_link:hover 
+{
+    color: #749400;
 }
 
-.works{
-    width: 100%;
+.intro
+{
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-.works_title{
-    text-align: center;
-    font-size: 32px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-.works_item{
     width: 100%;
-    text-align: center;
+    height: 100vh;
+    max-height: 400px;
+
+    background: url(zadni-fon-dlya-main-cv-q3.jpg) center no-repeat;
+    background-size: cover;
 }
-.works_photo{
-    width:300px;
-    height: 150px;
+
+.intro_inner
+{
+    text-align: center;
+    color: #143101;
+}
+
+.intro_title
+{
+    font-size: 56px;
+}
+
+.intro_suptitle
+{
+    font-size:40px;
+}
+
+.me
+{
+    margin: 20px 10% 20px 10%;
+    height: 300px;
+}
+
+.me_photo
+{
+    padding: 0;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    float: left;
+}
+
+.me_item
+{
+    display: inline-block;
+}
+
+.me_title
+{
+    color: #0b100b;
+    font-size: 40px;
     margin: 20px;
 }
-.works_text{
-    font-size:20px;
+
+.me_text 
+{
+    color: #554d36;
+    font-size: 24px;
+    margin: 20px;
+}
+
+.skills
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    
+    background: url(zadni-fon-dlya-main-cv-q3-2.jpg) center no-repeat;
+    background-size: cover;
+}
+
+.skills_title
+{
+    font-size: 40px;
+    padding-top: 50px;
+    padding-bottom: 30px;
+    text-align: center;
+    color: #031d00;
+}
+
+.skills_text 
+{
+    font-size: 30px;
+    text-align: center;
+    color: #002c00;
+}
+
+li
+{
+    list-style-type: none;
+}
+
+ul
+{
+    padding-inline-start: 0;
+}
+
+.works
+{
+    margin: 0px 10% 0px 10%;
+}
+
+.works_title
+{
+    font-size: 50px;
+    text-align: center;
+    margin: 20px;
+    color: rgb(12, 27, 0);
+}
+
+.works_item
+{
+    display: inline-block;
+}
+
+.works_image
+{
+    max-width: 400px;
+    float: left;
+    margin: 20px;
+}
+
+.works_text
+{
+    font-size: 30px;
+    margin:20px;
+    color: rgb(27, 59, 0);
+}
+
+.foot
+{
+    background-color: #143101;
+    display: flex;
+    font-size: 18px;
+}
+
+.foot_items
+{
+    margin: 20px 10% 20px 10%;
+    display:flex;
+    float: left;
+}
+
+.imgaa
+{
+    width: 100%;
+    height: 100%;
+    right:0;
+    left: 0;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.imga
+{
     margin-top: 20px;
-    margin-bottom: 20px;
+    border-radius: 50%;
 }
 
-.footer{
-    background-color: #0000009a;
-    font-size:16px;
-    right: 0;
-    left:0;
-}
-
-@media(max-width:1200px){
-    .intro_h1{
-        font-size: 60px;
-    }
-    .intro_h2{
-        font-size: 40px;
-    }
-
-    .header{
-        font-size:24px;
-    }
-    .footer{
-        font-size:12px;
-    }
-
-    .nav_link{
-        margin:15px;
-    }
-
-    .skills_title{
-        font-size: 24px;
-        margin: 15px;
-    }
-    .skills_text{
-        font-size:20px;
-    }
-}
-
-@media(max-width:800px){
-    .intro_h1{
-        font-size: 40px;
-    }
-    .intro_h2{
-        font-size: 20px;
-    }
-
-    .header{
-        font-size:18px;
-    }
-    .footer{
-        font-size:9px;
-    }
-
-    .nav_link{
-        margin:10px;
-    }
-
-    .skills_title{
-        font-size: 18px;
-        margin: 10px;
-    }
-    .skills_text{
-        font-size:14px;
-    }
-
+@media (max-width: 1100px)
+{
     .me{
-        flex-direction: column;
-        text-align: center;
-    }
-    .me_title{
-        font-size: 16px;
-    }
-    .me_text{
-        font-size: 8px;
-    }
-    .me_photo{
-        width:50%;
-        height: 50%;
-    }
-
-    .works_item{
         width: 100%;
-        flex-direction: column;
+        height: 100%;
+        height: 600px;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
         text-align: center;
-    }
-    .works_text{
-        width: 100%;
-        font-size:12px;
-    }
-    .works_photo{
-        width:150px;
-        height: 75px;;
-    }
-}
-
-@media(max-width:400px){
-    .intro_h1{
-        font-size: 20px;
-    }
-    .intro_h2{
-        font-size: 10px;
-    }
-
-    .header{
-        font-size:12px;
-    }
-    .footer{
-        font-size:6px;
-    }
-
-    .nav_link{
-        margin:5px;
-    }
-
-    .skills_title{
-        font-size: 12px;
-        margin: 5px;
-    }
-    .skills_text{
-        font-size:8px;
-    }
-}
-
-@media(max-width:400px){
-    .header{
-        font-size:8px;
     }
 }
